[gd_scene load_steps=2 format=3 uid="uid://2xdf65asx6rq"]

[ext_resource type="Script" path="res://menus/menus_script/game_pause.gd" id="1_gwrri"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_gwrri")

[node name="center" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="vbox" type="VBoxContainer" parent="center"]
layout_mode = 2

[node name="resume" type="Button" parent="center/vbox"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../load")
text = "Resume"

[node name="load" type="Button" parent="center/vbox"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume")
focus_neighbor_bottom = NodePath("../options")
text = "Load"

[node name="options" type="Button" parent="center/vbox"]
layout_mode = 2
focus_neighbor_top = NodePath("../load")
focus_neighbor_bottom = NodePath("../quit")
text = "Options"

[node name="quit" type="Button" parent="center/vbox"]
layout_mode = 2
focus_neighbor_top = NodePath("../options")
text = "Quit"

[connection signal="pressed" from="center/vbox/resume" to="." method="_on_resume_pressed" flags=18]
[connection signal="pressed" from="center/vbox/load" to="." method="_on_load_pressed" flags=18]
[connection signal="pressed" from="center/vbox/options" to="." method="_on_options_pressed" flags=18]
[connection signal="pressed" from="center/vbox/quit" to="." method="_on_quit_pressed" flags=18]
